--- a/murphverse.css
+++ b/murphverse.css
@@ -4,8 +4,14 @@
     src: url("Pokemon-Solid.ttf") format("truetype");
 }
 
+.press-start-2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+
 body {
-    font-family: "Pokemon", sans-serif;
+    font-family: "Press Start 2P", system-ui;
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -14,6 +20,7 @@ body {
 
 
 header {
+    font-family: "Pokemon", "Press Start 2P", system-ui;
     position: relative;
     padding: 20px;
     text-align: center;
